--- a/css/index.css
+++ b/css/index.css
@@ -320,13 +320,13 @@ img{
     float: right;
     border-radius: 5px;
 }
-.tabList > li{
-    width: 566px;
-    height: 90px;
+/*.tabList > li{*/
+/*    width: 566px;*/
+/*    height: 90px;*/
 
-    background-color: #e9eaed;
+/*    background-color: #e9eaed;*/
 
-}
+/*}*/
 .tabList  .hot{
     font-size: 15px;
     color: #000000;
@@ -336,6 +336,19 @@ img{
     box-sizing: border-box;
     border-radius: 5px;
     line-height: 32px;
+}
+.tabList li{
+    height: 38px;
+    /*margin-top: 12px;*/
+    /*background-color: #e9eaed;*/
+    border-radius: 5px;
+    /*padding: 0px 22px 0px 38px;*/
+    position: relative;
+    /*white-space: nowrap;*/
+    text-overflow:ellipsis;
+    overflow: hidden;
+    line-height: 38px;
+
 }
 .tabList  h2{
     font-size: 15px;
@@ -349,7 +362,7 @@ img{
     position: relative;
 
 }
-.tabList li h2::before{
+.tabList  h2::before{
     content:'1' ;
     color: white;
     width: 16px;
@@ -363,21 +376,23 @@ img{
     line-height: 16px;
 
 }
-.tabList li h2:first-child(2)::before{
-    content: '1';
-    background-color: #ff6600;
-}
-.tabList h2:nth-child(2)::before{
+/*.tabList li h2:first-child(2)::before{*/
+/*    content: '1';*/
+/*    background-color: #ff6600;*/
+/*}*/
+.tabList li:nth-child(2)  h2::before{
     content: '2';
+    background-color: #b1b1b1;
 }
-.tabList h2:nth-child(3)::before{
+.tabList li:nth-child(3) h2::before{
     content: '3';
+    background-color: #b1b1b1;
 }
-.tabList h2:nth-child(4)::before{
+.tabList li:nth-child(4) h2::before{
     content: '4';
     background-color: #b1b1b1;
 }
-.tabList h2:nth-child(5)::before{
+.tabList li:nth-child(5) h2::before{
     content: '5';
     background-color: #b1b1b1;
 }
