--- a/css/index.css
+++ b/css/index.css
@@ -91,50 +91,62 @@ img{
     margin-right: 12px;
     float: left;
     position: relative;
+    overflow: hidden;
 }
-/*.darwList{*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*}*/
-.darw li{
+.darwList{
+    width: 100%;
+    height: 100%;
+}
+.darwList li{
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
-    left: 0px;
-    opacity:0;
-    transition:opacity 2s;
+    /*left: 0px;*/
+    left: 620px;
+    /*opacity:0;*/
+    /*transition:opacity 2s;*/
 }
-.darw li a{
+.darwList > li:first-child{
+    left:0;
+}
+ .darw li a{
     width: 100%;
     height: 100%;
     display: block;
 }
+
 .darw .LeftBnt , .rightBnt{
     width: 40px;
     height: 32px;
     top: 50%;
-    background-color: #009966;
     margin-top: -16px;
     position: absolute;
     z-index: 999;
 }
 .LeftBnt{
     left: 50px;
+    opacity:0;
+    transition:all 2s;
 
 }
 .rightBnt{
     right: 50px;
     z-index: 999;
+    opacity:0;
+    transition:all 2s;
 }
 .bntList{
     width: 96px;
     height: 10px;
     /*background-color: #009966;*/
     position: relative;
-    margin-top: 224px;
+    /*margin-top: 224px;*/
     margin-left: 262px;
     z-index: 999;
+    position: absolute;
+    left: 0;
+    bottom: 30px;
     /*margin-left: auto ;*/
 
 
@@ -147,6 +159,9 @@ img{
     margin-right: 10px;
     background-color: white;
     z-index: 999;
+}
+.bntList .hot{
+    background-color: #046B80;
 }
 
 .banner .film{
@@ -679,7 +694,7 @@ img{
 .eassyDraw{
     width: 200px;
     height: 124px;
-    background-color: #333333;
+    /*background-color: #333333;*/
     border-radius: 5px;
     display: inline-block;
     float: left;
